package com.example.learningmaterials.设计模式.a_简单工厂

open class Operation {

    var num1: Double = 0.0
    var num2: Double = 0.0


    open fun getResult(): Double = 0.0
}