@startuml

class OperationFactory{
{field} 创建计算类对象
-- Field --
Operation operation
-- Method --
{method} +createOperation()
}

class Operation{
{field} 运算
-- field --
Double num1
Double num2
--
{method} +getResult() : 计算出结果
}

class OperationAdd{
{field} 加法
{method} +getResult() : Double
}

class OperationSub{
{field} 减法
{method} +getResult() : Double
}

class OperationMul{
{field} 乘法
{method} +getResult() : Double
}

class OperationDiv{
{field} 除法
{method} +getResult() : Double
}

OperationFactory .> Operation
Operation <|-- OperationAdd
Operation <|-- OperationSub
Operation <|-- OperationMul
Operation <|-- OperationDiv


@enduml